codex-rs/cli/tests/snapshots/account__account_list_colors.snap
---
source: cli/tests/account.rs
expression: "output.replace('\\x1b', \"ESC\").replace('\\r', \"\")"
---
ESC[36;1mALIASESC[0m                     ESC[36;1mPRIORITYESC[0m    ESC[36;1mCREDITSESC[0m  ESC[36;1mCREDIT USEESC[0m  ESC[36;1mBANKED RESETSESC[0m  ESC[36;1mLIMITSESC[0m                               ESC[36;1mRESET INESC[0m
ESC[32;1m*alphaESC[0m                    1           unknown  disabled    unknown        unknown (unsupportedAuthentication)  unknown
 axel-marchenko-tt-eu-pp  4294967295  unknown  disabled    unknown        unknown (unsupportedAuthentication)  unknown
