codex-rs/cli/tests/snapshots/account__account_list_long_alias.snap
---
source: cli/tests/account.rs
expression: human
---
ALIAS                     PRIORITY    CREDITS  CREDIT USE  BANKED RESETS  LIMITS                               RESET IN
*alpha                    1           unknown  disabled    unknown        unknown (unsupportedAuthentication)  unknown
 axel-marchenko-tt-eu-pp  4294967295  unknown  disabled    unknown        unknown (unsupportedAuthentication)  unknown
