codex-rs/cli/tests/snapshots/account__account_list_spend_limit.snap
---
source: cli/tests/account.rs
expression: "String::from_utf8_lossy(&restricted.get_output().stdout)"
---
ALIAS   PRIORITY  NOTE     BANKED RESETS  LIMITS                               RESET IN
*alpha  1         primary  none           100%                                 unknown
 beta   2                  unknown        unknown (unsupportedAuthentication)  unknown
